# CodeLens

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.maximal  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  SKILL-QUICK.md  SKILL.md  axon_raw.json  codeatlas_raw.json  codegraph_raw.json  codelandscape_raw.json  codelens-watch.py  emerge_raw.json  emerge_readme.json  jest.config.js  mcp_config.json  package-lock.json  package.json  pyproject.toml  pytest.ini  search1.json  search10.json  search2.json  search3.json  search4.json  search5.json  search6.json  search7.json  search8.json  search9.json  setup.py  setup.sh  (+4 more)
agent-ctx/: 1-main-page-api-routes.md  codelens-ws-setup.md  core-lib-modules-agent.md  task-neural-workspace-expansion-agent.md
benchmarks/: __init__.py  check_regression.py  run_benchmarks.py
codelens/: __init__.py  __main__.py
docs/: README.md  agent-usage-guide.md  install.md  llm-framework.md  taint-engine-audit.md
references/: agent-integration.md  changelog.md  parser-rules.md  query-examples.md  rule-schema.json
scripts/: adr_engine.py  agent_guide.py  apimap_engine.py  architecture_engine.py  ast_taint_engine.py  astgrep_runner.py  autofix_engine.py  base_engine.py  base_parser.py  baseline_diff.py  callgraph_engine.py  check_design_doc.py  circular_engine.py  codelens.py  codelensignore.py  confidence.py  configdrift_engine.py  convention_engine.py  crossfile_taint_engine.py  crossrepo_engine.py  cssdeep_engine.py  cypher_parser.py  cypher_query_engine.py  dashboard_engine.py  dataflow_engine.py  deadcode_engine.py  dep_audit_engine.py  dependents_engine.py  diff_engine.py  diff_scope.py  edge_resolver.py  entrypoints_engine.py  envcheck_engine.py  exit_policy.py  git_aware.py  git_integration.py  gitleaks_backend.py  grammar_loader.py  graph_model.py  handbook_helpers.py  (+44 more)
shared/: types.ts
skills/codelens/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL-QUICK.md  SKILL.md  pyproject.toml  setup.sh  skill.json
skills/codelens/references/: agent-integration.md  changelog.md  parser-rules.md  query-examples.md  status-codes.md
skills/codelens/scripts/: a11y_engine.py  apimap_engine.py  base_engine.py  base_parser.py  circular_engine.py  codelens.py  complexity_engine.py  configdrift_engine.py  context_engine.py  convention_engine.py  cssdeep_engine.py  dataflow_engine.py  deadcode_engine.py  debugleak_engine.py  dependents_engine.py  diff_engine.py  edge_resolver.py  entrypoints_engine.py  envcheck_engine.py  framework_detect.py  grammar_loader.py  impact_engine.py  incremental.py  missing_refs.py  outline_engine.py  ownership_engine.py  perfhint_engine.py  refactor_safe_engine.py  regexaudit_engine.py  registry.py  search_engine.py  secrets_engine.py  sideeffect_engine.py  smell_engine.py  stacktrace_engine.py  statemap_engine.py  testmap_engine.py  trace_engine.py  typeinfer_engine.py  utils.py  (+2 more)
skills/codelens/scripts/commands/: __init__.py  a11y.py  analyze.py  api_map.py  artifact_scan.py  ask.py  binary_scan.py  circular.py  complexity.py  context.py  css_deep.py  dataflow.py  dead_code.py  debug_leak.py  dependents.py  detect.py  diff.py  entrypoints.py  handbook.py  impact.py  init.py  list.py  outline.py  ownership.py  perf_hint.py  query.py  refactor_safe.py  regex_audit.py  scan.py  secrets.py  side_effect.py  smell.py  stack_trace.py  state_map.py  summary.py  symbols.py  test_map.py  trace.py  type_infer.py  watch.py
skills/codelens/scripts/formatters/: markdown.py
skills/codelens/scripts/parsers/: __init__.py  css_parser.py  fallback_c.py  fallback_cpp.py  fallback_css.py  fallback_dart.py  fallback_elixir.py  fallback_gdscript.py  fallback_go.py  fallback_haskell.py  fallback_html.py  fallback_java.py  fallback_js_backend.py  fallback_kotlin.py  fallback_lua.py  fallback_objc.py  fallback_php.py  fallback_python.py  fallback_rust.py  fallback_scala.py  fallback_swift.py  fallback_zig.py  html_parser.py  js_backend_parser.py  js_frontend_parser.py  python_parser.py  rust_parser.py  svelte_parser.py  tailwind_detector.py  ts_backend_parser.py  tsx_parser.py  vue_parser.py
skills/codelens/tests/: __init__.py  test_cli.py  test_css_parser.py  test_deadcode_engine.py  test_edge_resolver.py  test_framework_detect.py  test_html_parser.py  test_integration.py  test_js_backend_parser.py  test_js_frontend_parser.py  test_path_ignore.py  test_perfhint_engine.py  test_registry.py  test_rust_parser.py  test_search_engine.py  test_secrets_engine.py  test_smell_engine.py
skills/codelens/tests/fixtures/: app.js  main.rs  sample.css  server.js
tests/: conftest.py  test_a11y_command.py  test_adr.py  test_affected_command.py  test_agent_guide.py  test_apimap_router_middleware.py  test_architecture.py  test_astgrep_runner.py  test_baseline_diff.py  test_check_ci_flags.py  test_check_design_doc.py  test_circular_engine.py  test_cli.py  test_cli_error_format.py  test_codelens.py  test_codelensignore.py  test_command_count.py  test_command_registry.py  test_compact_format.py  test_complexity_engine.py  test_confidence.py  test_config_secret_redaction.py  test_crossrepo_engine.py  test_css_deep_command.py  test_cypher_parser.py  test_cypher_query.py  test_dataflow_engine.py  test_dead_code_command.py  test_deadcode_engine.py  test_deps_audit.py  test_design_doc_check.py  test_diagnostics_command.py  test_diff_engine_edges.py  test_diff_engine_nodes.py  test_diff_scope.py  test_docs_registry_sync.py  test_doctor.py  test_exit_policy.py  test_export_snapshot.py  test_flow_diff.py  (+69 more)
tests/fixtures/sca/: Package.resolved  Pipfile  build.gradle  gradle.lockfile  packages.lock.json  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt
update!/: CodeLens_CodeGraph_Upgrade_Analysis.md  CodeLens_Upgrade_Issues_from_Emerge.md  CodeLens_Upgrade_Issues_from_RepoAudit.md  CodeLens_vs_OpenTaint_Upgrade_Analysis.md  CodeLens_vs_UnderstandAnything_Upgrade_Analysis.md
upload/: SKILL.md  codelens-spec.md  parser-rules.md  (+1 more)
(+376 files in other folders)
