[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens"
version = "8.2.0"
description = "Live Codebase Reference Intelligence — 12 commands for AI-powered code analysis, security auditing, and quality scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Wolfvin"},
]
keywords = [
    "code-analysis", "reference-tracking", "dead-code", "duplicate-detection",
    "frontend", "backend", "rust", "html", "css", "javascript", "typescript",
    "tsx", "jsx", "react", "vue", "svelte", "tailwind", "tree-sitter",    "ast-parsing", "call-graph", "class-tracking", "impact-analysis",
    "circular-dependency", "missing-references", "code-search",
    "data-flow", "taint-analysis", "code-smell", "side-effects",
    "security-analysis", "secret-detection", "accessibility", "a11y",
    "vulnerability-scan", "performance-hints", "css-analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

dependencies = [
    "tree-sitter>=0.21.0",
]

[project.optional-dependencies]
grammars = [
    "tree-sitter-html",
    "tree-sitter-css",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-python",
    # Issue #198: 5 new languages
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-php",
    "tree-sitter-ruby",
    "tree-sitter-c",
    "tree-sitter-cpp",
]
watch = [
    "watchdog",
]
# Issue #46: Semgrep-compat YAML rule engine — Phase 1.
# PyYAML is already required transitively but listed for clarity.
rules = [
    "PyYAML>=6.0",
]
# Issue #48: Native LSP 3.17 server via `codelens lsp`.
# pygls + lsprotocol provide the JSON-RPC + LSP type bindings.
lsp = [
    "pygls>=2.0",
    "lsprotocol>=2024.0",
    "tree-sitter-python>=0.23",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = [
    "codelens[grammars,watch,rules,lsp,dev]",
]

# Issue #54 Phase 1: entry point for ``pip install codelens`` / ``pipx install codelens``.
# The codelens package (codelens/__init__.py) is a thin wrapper that delegates
# to scripts/codelens.py — the legacy implementation.
[project.scripts]
codelens = "codelens:main"

# Install both the new codelens/ package AND the legacy scripts/ directory
# (which contains the actual implementation). The scripts/ dir has no
# __init__.py so its subdirs (commands/, formatters/, etc.) are found as
# packages and its top-level .py files become importable modules.
[tool.setuptools.packages.find]
where = [".", "scripts"]
include = ["codelens", "codelens.*", "commands", "commands.*", "formatters", "formatters.*", "parsers", "parsers.*", "plugins", "plugins.*"]
# Note: scripts/codelens.py is auto-discovered as a top-level py-module
# named "codelens" which would shadow the codelens/ package. We handle
# this in setup.py by explicitly excluding it — see setup.py for details.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]
