[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo project for SCA parser tests"
authors = ["CodeLens <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
requests = ">=2.31,<3.0"
flask = {version = "~=2.3", extras = ["async"]}
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "*"
mypy = {version = ">=1.4"}

# PEP 621 section (also exercised)
[project]
name = "demo"
version = "0.1.0"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0,<14.0",
    "tomli-w ; python_version < '3.11'",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
]
